v.0.8.0.0 version to test on field on physical smart phones.
New version of database transferred to test phones.
CirclesDrawable: small refactor
FoodPage: added an external ScrollView, as it couldn't fit in the smaller test phone
Foods: added some more controls on users' data congruency
MealPage: found a little more space for the name of the FoodInMeal
Sqlite_SqlToCreateDatabase: updated the creation script of the database to the current version

--- a/GlucoMan.Maui/MealPage.xaml
+++ b/GlucoMan.Maui/MealPage.xaml
@@ -109,19 +109,19 @@
                 <Label Grid.Row="1" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" 
                         HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-                <Entry Grid.Row="2" Grid.Column="0" x:Name="txtFoodInMealName"  
-                       Grid.ColumnSpan="2" 
-                    BackgroundColor="LightGreen" TextColor="Black"
+                <HorizontalStackLayout Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
+                    <Entry x:Name="txtFoodInMealName" WidthRequest="186"
+                       BackgroundColor="LightGreen" TextColor="Black"
                     ToolTipProperties.Text="Name: short name of this food of meal"
-                    Margin="1"  HorizontalTextAlignment="Start"
-                       />
-                <!--Text="{Binding Name}"-->
-                <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAccuracyOfChoFoodInMeal" 
+                    Margin="1"  HorizontalTextAlignment="Start"/>
+                    <!--Text="{Binding Name}"-->
+                    <Entry x:Name="txtAccuracyOfChoFoodInMeal" WidthRequest="40"
                     Margin="1" Keyboard="Numeric" HorizontalTextAlignment="End" 
                     ToolTipProperties.Text="Accuracy: percent numerical accuracy of food [%]"
                     BackgroundColor="LightGreen" TextColor="Black"/>
-                <!--Text="{Binding AccuracyOfChoEstimate}"-->
-                <!--Unfocused="txtAccuracyOfChoFoodInMeal_Unfocused"-->
+                    <!--Text="{Binding AccuracyOfChoEstimate}"-->
+                    <!--Unfocused="txtAccuracyOfChoFoodInMeal_Unfocused"-->
+                </HorizontalStackLayout>
                 <Picker Grid.Row="2" Grid.Column="3" x:Name="cmbAccuracyFoodInMeal"
                     Margin="1" HorizontalTextAlignment="End"
                     ToolTipProperties.Text="Accuracy: qualitative accuracy of this food, as a word"
